add listing feed by user_id
